--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "echarts-amap": "^1.0.0-rc.6",
     "element-ui": "2.4.6",
     "js-cookie": "2.2.0",
+    "moment": "^2.22.2",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "v-charts": "^1.19.0",
